force-app/main/default/objects/ai_Agent_Notes__c/ai_Agent_Notes__c.object-meta.xml
<CustomObject>
    <label>Agent Notes</label>
    <nameField>
        <displayFormat>AN-{0000}</displayFormat>
        <label>Agent Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>