force-app/main/default/objects/ai_Agent_Notes__c/fields/ai_Description__c.field-meta.xml
<CustomField>
    <fullName>ai_Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>