force-app/main/default/objects/ai_Agent_Notes__c/fields/ai_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>ai_Issue_Date__c</fullName>
    <label>Issue Date</label>
    <type>Date</type>
</CustomField>