force-app/main/default/objects/ai_Agent_Notes__c/fields/ai_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>ai_Issue_Type__c</fullName>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Login issue</fullName>
            </value>
            <value>
                <fullName>Delivery Issued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>